@@ -1,0 +1,68 @@
+/*
+    This file is part of jpcsp.
+
+    Jpcsp is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Jpcsp is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Jpcsp.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package jpcsp;
+public class ElfHeaderInfo extends javax.swing.JInternalFrame {
+
+    /** Creates new form ElfHeaderInfo */
+    public ElfHeaderInfo() {
+        initComponents();
+        ELFInfoArea.append(ElfHeader.ElfInfo);
+    }
+
+    /** This method is called from within the constructor to
+     * initialize the form.
+     * WARNING: Do NOT modify this code. The content of this method is
+     * always regenerated by the Form Editor.
+     */
+    @SuppressWarnings("unchecked")
+    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
+    private void initComponents() {
+
+        jScrollPane1 = new javax.swing.JScrollPane();
+        ELFInfoArea = new javax.swing.JTextArea();
+
+        setClosable(true);
+        setTitle("Elf Header Info");
+
+        ELFInfoArea.setColumns(20);
+        ELFInfoArea.setEditable(false);
+        ELFInfoArea.setFont(new java.awt.Font("Times New Roman", 0, 12)); // NOI18N
+        ELFInfoArea.setLineWrap(true);
+        ELFInfoArea.setRows(5);
+        jScrollPane1.setViewportView(ELFInfoArea);
+
+        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
+        getContentPane().setLayout(layout);
+        layout.setHorizontalGroup(
+            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addComponent(jScrollPane1, javax.swing.GroupLayout.DEFAULT_SIZE, 253, Short.MAX_VALUE)
+        );
+        layout.setVerticalGroup(
+            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addComponent(jScrollPane1, javax.swing.GroupLayout.DEFAULT_SIZE, 313, Short.MAX_VALUE)
+        );
+
+        pack();
+    }// </editor-fold>//GEN-END:initComponents
+
+
+    // Variables declaration - do not modify//GEN-BEGIN:variables
+    private javax.swing.JTextArea ELFInfoArea;
+    private javax.swing.JScrollPane jScrollPane1;
+    // End of variables declaration//GEN-END:variables
+
+}
